# Just-Call-Me-Al

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  config.toml  multiple  requirements-expressivity-finetuning.txt  requirements.txt  test_websocket.py
.cargo/: config.toml
.cursor/rules/: audio_processing.mdc  code_review.mdc  commands.mdc  cursor_rules.mdc  dependencies.mdc  derived-cursor-rules.mdc  dev_workflow.mdc  memory_management.mdc  new_features.mdc  project_workflow.mdc  rust_async.mdc  rust_code.mdc  rust_formal_patterns.mdc  rust_integration.mdc  rust_safety.mdc  rust_testing.mdc  self_improve.mdc  task_tracking.mdc  tasks.mdc  tests.mdc  ui.mdc  utilities.mdc
.specstory/history/: 2025-03-31_12-42-project-build-troubleshooting.md
app/: package-lock.json  package.json
app/public/: audio-worklet-processor.js
app/src/app/: globals.scss  page.tsx
configs/: emotion_specific_finetuning.yaml  expressive_finetuning.yaml
docs/: documentation_standards.md  emotion_specific_finetuning.md  expressive_finetuning_guide.md  expressive_speech_datasets.md  expressivity_finetuning_summary.md  installation_guide.md  troubleshooting.md
docs/api/: websocket_api.md
docs/architecture/: system_architecture.md
evaluation/: run_evaluation.py  test_sentences.csv
evaluation/csm-eval/: Cargo.toml
evaluation/csm-eval/src/: main.rs
evaluation/metrics/: calculate_wer.py  evaluate_homographs.py  evaluate_pronunciation.py  evaluate_prosody.py
models/csm-1b/: config.json
scripts/: download_models.sh  download_test_audio.sh  emotion_specific_finetuning.py  evaluation_metrics.py  merge_expressive_datasets.py  prepare_cremad_dataset.py  prepare_ravdess_dataset.py  run_emotion_finetuning.sh  run_expressive_finetuning.sh  run_optimized_finetuning.py  visualization_tools.py
src/: context.rs  errors.rs  lib.rs  main.rs  utils.rs  vocoder.rs  websocket.rs
src/audio/: codec.rs  mod.rs  streaming.rs
src/audio/codec/: compat.rs  mod.rs
src/llm_integration/: context_embeddings.rs  evaluation.rs  llm_service.rs  mod.rs  optimization.rs  prompt_templates.rs  tests.rs
src/llm_integration/tests/: context_embeddings_tests.rs  evaluation_tests.rs  mod.rs  optimization_tests.rs  prompt_template_tests.rs
src/models/: config.rs  csm.rs  csm_tests.rs  device.rs  mod.rs  moshi_compat.rs  moshi_impl.rs  moshi_speech_model.rs  patch.rs  prosody.rs  tensor.rs
src/models/moshi_speech_model/: moshi_impl.rs
src/rvq/: mod.rs
src/tokenization/: bpe.rs  mod.rs  vocab.rs
src/utils/: safe_tensor.rs  tensor.rs
web/: audio_processor.test.js  index.html  jest.setup.js  package.json  script.js  streaming_client.js  streaming_client.test.js  style.css
