[package]
name = "csm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.2"
hound = "3.5"
log = "0.4"
parking_lot = "0.12"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# ML dependencies
tch = "0.19.0"

# Candle dependencies
candle-core = "0.8.4"
candle-nn = "0.8.4"
candle-transformers = "0.8.4"

# Direct dependencies for Moshi
moshi = { git = "https://github.com/kyutai-labs/moshi.git", branch = "main", package = "moshi" }
tokenizers = "0.15.0"
safetensors = "0.4.5"
memmap2 = "0.9.0"

# Fixed version dependencies for compatibility
rand = "0.8.5"
half = "2.5.0"

# Audio dependencies
coreaudio-rs = { version = "0.12.1", optional = true }
cpal = { version = "0.15.3", optional = true }

# REST API dependencies (must be optional if listed in a feature)
axum = { version = "0.7", features = ["multipart", "ws", "macros"], optional = true }
axum-extra = { version = "0.9.3", features = ["typed-header"], optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.5.2", features = ["cors", "trace", "compression-br", "fs"], optional = true }
hyper = { version = "1.4.0", optional = true }
hyper-util = { version = "0.1.3", features = ["client", "client-legacy", "server-auto"], optional = true }
http = { version = "1.1.0", optional = true }
http-body-util = { version = "0.1.1", optional = true }
socketio-rs = { version = "0.1.8", optional = true }

# Other dependencies
async-trait = "0.1.80"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
uuid = { version = "1.4", features = ["v4", "serde"] }
toml = "0.8.10"
futures = "0.3"
ringbuf = "0.3.3"

# Optional dependencies for python integration
pyo3 = { version = "0.21.2", optional = true}

# Added tokio-stream dependency
tokio-stream = "0.1"
bytemuck = { version = "1.22.0", features = ["derive"] }

[features]
# Enable audio playback
audio = ["coreaudio-rs", "cpal"]

# ML backends
# Add rest_api to default features
default = ["metal", "rest_api"]

# Candle backend feature flags
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "moshi/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal", "moshi/metal"]
python = ["pyo3"]

# REST API feature (Keep the definition, list dependencies)
rest_api = ["axum", "tower-http", "axum-extra", "hyper", "hyper-util", "http", "http-body-util", "socketio-rs"]

# Enable blocking operations
enable_blocking = []
# Add missing features used in cfg attributes
enable_moshi = []
enable_tch = []

[[bin]]
name = "csm"
path = "src/main.rs"

[[bin]]
name = "hybrid_demo"
path = "src/bin/hybrid_demo.rs"

[lib]
name = "csm"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dev-dependencies]
tracing-test = "0.2"
tempfile = "3.10"

# Add build dependencies here
[build-dependencies]

[workspace]
resolver = "2"
members = [
    # Add workspace members with their own Cargo.toml here
]

[workspace.dependencies]
# Pin rand to 0.8.5 to match moshi
rand = "=0.8.5"
half = "2.5.0"

# ... other dependencies ...

# ... rest of existing code ...


