[package]
name = "csm-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
csm = { path = "../../" }
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
async-std = "1.12"
chrono = "0.4"
edit_distance = "2.1"
hound = "3.5"
anyhow = "1.0"
futures = "0.3"
rubato = "0.14"
rand = "0.8"
rustfft = "6.2"
whisper-rs = { version = "0.11", optional = true }
tempfile = "3.10"

[features]
default = []
asr = ["dep:whisper-rs"]
